--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <nav class="navbar">
     <div class="brand">
-      <a href="https://imgbb.com/"><img class="logo-wrapper" src="https://i.ibb.co/s9N5gD44/app-team.webp" alt="app-team"></a>
+      <a href="https://imgbb.com/"><img class="logo-wrapper" src="https://i.ibb.co/s9N5gD44/app-team.webp" alt="app-team" border="0"></a>
       <span>𝔸ℙℙ 𝕋𝔼𝔸𝕄 ℕ𝕀𝕋ℍ</span>
 
     </div>
@@ -53,7 +53,7 @@
   </div>
 
   <div class="inc-right">
-    <a href="https://ibb.co/20JpNVbt"><img src="https://i.ibb.co/Kcn8w41q/coding.webp" alt="coding"></a>
+    <a href="https://ibb.co/20JpNVbt"><img src="https://i.ibb.co/Kcn8w41q/coding.webp" alt="coding" border="0"></a>
   </div>
 </section>
   <section id="about" class="about-us">
@@ -71,7 +71,7 @@
     </p>
   </div>
 </section>
-  <section class="team-section">
+  <section class="team-section" id="team">
   <h2 class="section-title">Meet Our Team</h2>
   <div class="team-grid">
     <div class="team-card">
@@ -102,7 +102,7 @@
   </div>
 </section>
   <section id="events" class="events">
- 
+ <section class="events">
   <h2>Events</h2>
   <div class="event-grid">
 
@@ -191,25 +191,32 @@
     <h2>Our <span>Projects</span></h2>
   </div>
   <div class="projects-container">
+    <a href="https://play.google.com/store/apps/details?id=com.appteam.nimbus2k25">
     <div class="project-card" style="background-image: url('https://freeimghost.net/images/2025/07/10/nimbus-nith.webp');">
       <div class="project-overlay">
-        <button class="play-btn">▶</button>
-        <h3>Nimbus App</h3>
+        <a href="https://play.google.com/store/apps/details?id=com.appteam.nimbus2k25"><button class="play-btn">▶</button> </a>
+        <h3>Nimbus App 2k25</h3>
         <p>Flagship app used during the NIMBUS fest for registrations, events, and announcements.</p>
+        
       </div>
     </div>
+   
 
     <div class="project-card" style="background-image: url('https://i.ibb.co/p67f9WjH/hillfair.png');">
       <div class="project-overlay">
+        <a href="https://play.google.com/store/apps/details?id=com.appteam.hillfair2k24">
         <button class="play-btn">▶</button>
-        <h3>Hillfair Website</h3>
-        <p>Vibrant and interactive site developed to manage one of the largest cultural fests of NITH.</p>
+        </a>
+        <h3>Hillfair App 2k24</h3>
+        <p>Vibrant and interactive app developed to manage one of the largest cultural fests of NITH.</p>
       </div>
     </div>
 
     <div class="project-card" style="background-image: url('https://i.ibb.co/wNnqX6pJ/appteam-img.webp');">
       <div class="project-overlay">
+        <a href="https://www.bing.com/ck/a?!&&p=78549532b470e266edfe52ce79f61becfe99d9a7d2dfe2b479714cb65d7a3f2aJmltdHM9MTc1MjYyNDAwMA&ptn=3&ver=2&hsh=4&fclid=09386740-1591-673b-121d-7238146366ca&psq=app+team+nith+official+website&u=a1aHR0cHM6Ly9hcHB0ZWFtLW5pdGguZ2l0aHViLmlvLw&ntb=1">
         <button class="play-btn">▶</button>
+        </a>
         <h3>Official App Team Website</h3>
         <p>Complete showcase of the team's events, achievements, and projects in a modern format.</p>
       </div>
@@ -217,15 +224,16 @@
 
     <div class="project-card" style="background-image: url('https://i.ibb.co/5Xq4cLBw/nimbus.webp');">
   <div class="project-overlay">
-    <button class="play-btn">▶</button>
-    <h3>Anonymous Confessions</h3>
+    <a href="https://play.google.com/store/apps/details?id=com.nithappteam.nimbus2k23&pcampaignid=web_share">
+    <button class="play-btn">▶</button></a>
+    <h3>Anonymous Confessions 2k24</h3>
     <p>A creative app for students to express thoughts anonymously during events like Nimbus.</p>
   </div>
 </div>
 
      
     </div>
-
+  </div>
 </section>
 
 
@@ -253,13 +261,54 @@
         Compete with the best minds in the nation for 36 hours of pure innovation and tech adrenaline. Get mentored, win swags, and connect with top industry partners.
       </p>
 
-      <a href="https://hackonhills.tech" class="hoh7-btn" target="_blank">Register Now</a>
+      <form id="registerForm" class="hoh7-form">
+  <input type="text" name="name" placeholder="Your Name" required />
+  <input type="email" name="email" placeholder="Your Email" required />
+  <input type="tel" name="phone" placeholder="Phone Number" required />
+  <button type="submit" class="button">Register</button>
+</form>
+
     </div>
     <div class="hoh7-poster">
       <img src="https://i.ibb.co/chFFmX01/hacka.png" alt="poster"/>
     </div>
   </div>
+  </section>
+ <section class="faq-section" id="faq">
+  <div class="faq-container">
+    <h2 class="faq-heading">FAQs - Hack on Hills 7.O</h2>
+
+    <div class="faq-item">
+      <div class="faq-question">When will the registrations for HOH 7.0 begin?</div>
+      <div class="faq-answer">Registrations will open by the end of July 2025. Stay tuned on our <a href="https://www.instagram.com/appteamnith/" target="_blank">Instagram</a> for updates.</div>
+    </div>
+
+    <div class="faq-item">
+      <div class="faq-question">Is HOH 7.0 a team event or individual participation?</div>
+      <div class="faq-answer">Hack on Hills is a team-based hackathon. Teams can have 2–4 members. Individual registration is allowed but you’ll be matched with a team later.</div>
+    </div>
+
+    <div class="faq-item">
+      <div class="faq-question">Will there be goodies and swags for participants?</div>
+      <div class="faq-answer">Yes! Every participant will receive exclusive Hack on Hills 7.0 swags, certificates, and a chance to win exciting prizes.</div>
+    </div>
+
+    <div class="faq-item">
+      <div class="faq-question">Is there any registration fee?</div>
+      <div class="faq-answer">Nope! HOH 7.0 is completely free to participate in. Just register on time and be ready to innovate.</div>
+    </div>
+
+    <div class="faq-item">
+      <div class="faq-question">Where can I contact for more queries?</div>
+      <div class="faq-answer">Drop us a message on our <a href="https://www.instagram.com/appteamnith/" target="_blank">Instagram handle</a> or reach out through the official website's contact form.</div>
+    </div>
+  </div>
 </section>
+
+
+
+
+
 <section class="contact-section" id="contact" >
   <div class="contact-container">
     <div class="contact-form">
@@ -275,7 +324,10 @@
     </div>
 
     <div class="contact-map">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3394.2732826408123!2d76.52477767545896!3d31.70842907412832!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3904d5487e12c4a1%3A0x395f92d3a202a7d0!2sNational%20Institute%20of%20Technology%2C%20Hamirpur!5e0!3m2!1sen!2sin!4v1752561442295!5m2!1sen!2sin" width="600" height="450"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3421.195043484977!2d76.9058510743078!3d31.70755658130602!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x391b5213b4e74213%3A0xd4f296e69ab7f4d0!2sNational%20Institute%20of%20Technology%2C%20Hamirpur%2C%20Himachal%20Pradesh!5e0!3m2!1sen!2sin!4v1710074984051!5m2!1sen!2sin"
+        width="100%" height="100%"  allowfullscreen="" loading="lazy">
+      </iframe>
     </div>
   </div>
 </section>
@@ -293,13 +345,13 @@
         <li><a href="#contact">Contact</a></li>
       </ul>
       <div class="footer-socials">
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-linkedin-in"></i></a>
-        <a href="#"><i class="fab fa-github"></i></a>
+        <a href="https://www.instagram.com/appteam_nith?igsh=dmxmZ2YyMGNmOHdw"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.linkedin.com/company/appteam-nith/"><i class="fab fa-linkedin-in"></i></a>
+        <a href="https://github.com/appteam-nith"><i class="fab fa-github"></i></a>
       </div>
     </div>
   </div>
 </footer>
 <script src="index.js"></script>
-      </body>
-    </html>
+</body>
+</html>
