--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
   <div class="contact-container">
     <div class="contact-form">
       <h2 class="contact-heading">GET IN TOUCH</h2>
-      <p class="subheading">We'd ❤️ to hear from you! Reach out anytime.</p>
+      <p class="subheading">We'd 	&#10084; to hear from you! Reach out anytime.</p>
       
       <form>
         <input type="text" placeholder="Your Name" class="contact-input" required />
@@ -335,7 +335,7 @@
 <footer class="footer">
   <div class="footer-content">
     <p class="footer-text">
-      Made with <span class="heart">❤️</span> by <strong>App Team NITH</strong>
+      Made with <span class="heart">	&#10084;</span> by <strong>App Team NITH</strong>
     </p>
     <div class="footer-links-socials">
       <ul class="footer-links">
